@@ -1,6 +1,0 @@
-requires 'perl' => '5.010001';
-requires 'Mojolicious' => '7.54';
-requires 'Future::Mojo';
-requires 'Role::Tiny' => '2.000002';
-requires 'Scalar::Util';
-test_requires 'Test::More' => '0.88';
