@@ -1,0 +1,10 @@
+runtime:
+  requires:
+    perl: '5.010001'
+    Mojolicious: '7.54'
+    Future::Mojo: 0
+    Role::Tiny: '2.000002'
+    Scalar::Util: 0
+test:
+  requires:
+    Test::More: '0.88'
